package name fix / version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "facebook-sdk-api",
-  "version": "0.0.3",
+  "name": "google-analytics-api",
+  "version": "0.0.1",
   "author": "Ionut Cirja",
   "url": "https://github.com/ionutcirja/google-analytics-api",
   "license": "MIT",
